infra/k8s/ingress-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
  - host: t.dev
    http:
      paths:
      - path: /api/user/?(.*)
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port: 
              number: 3000
      # - path: /posts/?(.*)/comments
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: comments-clusterip-service
      #       port: 
      #         number: 3002
      # - path: /posts
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: query-clusterip-service
      #       port: 
      #         number: 3004
      # - path: /
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: client-clusterip-service
      #       port: 
      #         number: 3000
